--- a/app/globals.css
+++ b/app/globals.css
@@ -101,3 +101,24 @@
 .ant-menu-submenu-selected .selected-icon {
   fill: #FFF;
 }
+
+.ant-segmented-item {
+  transition: #d0e6e7 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) !important;
+  border-radius: 8px !important;
+}
+
+.ant-segmented-item-selected {
+  background-color: #EBF5F5 !important;
+  border-radius: 8px !important;
+  border-color: #3A9699 !important;
+  border-width: 1px !important;
+  color: #3A9699 !important;
+}
+
+.ant-segmented-thumb {
+  background-color: #d0e6e7 !important;
+  border-radius: 8px !important;
+  border-color: #3A9699 !important;
+  border-width: 1px !important;
+}
+
