--- a/app/globals.css
+++ b/app/globals.css
@@ -105,9 +105,34 @@
   content: "SSS";
 } */
 
-/* .ant-menu-item {
-  content: "ss";
+/* .ant-menu-item-only-child::before {
+  content: "";
+  width: 2px;
+  height: 100%;
+  background: #d0e6e7;
+  margin-right: 6px;
+  margin-left: -6px;
 } */
+
+.ant-menu-item-only-child::before {
+  content: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjAiIGhlaWdodD0iNDQiIHZpZXdCb3g9IjAgMCAyMCA0NCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPGxpbmUgeDE9IjEwIiB5MT0iLTIuMTg1NTdlLTA4IiB4Mj0iMTAiIHkyPSI0NCIgc3Ryb2tlPSIjRDBFNkU3Ii8+CjxjaXJjbGUgY3g9IjEwIiBjeT0iMjIiIHI9IjQiIGZpbGw9IiNEMEU2RTciLz4KPC9zdmc+Cg==);
+  height: 100%;
+  margin-left: -24px;
+  margin-right: 8px;
+}
+
+.ant-menu-item-selected::before {
+  content: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjAiIGhlaWdodD0iNDQiIHZpZXdCb3g9IjAgMCAyMCA0NCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPGxpbmUgeDE9IjEwIiB5MT0iLTIuMTg1NTdlLTA4IiB4Mj0iMTAiIHkyPSI0NCIgc3Ryb2tlPSIjM0E5Njk5Ii8+CjxjaXJjbGUgY3g9IjEwIiBjeT0iMjIiIHI9IjQiIGZpbGw9IiMzQTk2OTkiLz4KPC9zdmc+Cg==);
+  height: 100%;
+  margin-left: -24px;
+  margin-right: 8px;
+}
+
+/* tambah transition */
+.ant-menu-submenu {
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) !important;
+}
+
 .ant-segmented-item {
   transition: #d0e6e7 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) !important;
   border-radius: 8px !important;
