--- a/app/globals.css
+++ b/app/globals.css
@@ -490,3 +490,9 @@
 :where(.css-dev-only-do-not-override-dkbvqv).ant-slider .ant-slider-track {
   background-color: #3a9699 !important;
 }
+
+:where(.css-dev-only-do-not-override-dkbvqv).ant-progress
+  .ant-progress-success-bg,
+:where(.css-dev-only-do-not-override-dkbvqv).ant-progress .ant-progress-bg {
+  background-color: #3a9699 !important;
+}
