--- a/app/globals.css
+++ b/app/globals.css
@@ -224,7 +224,7 @@
 }
 
 * {
-  font-family: "__Poppins_6d1a03", "__Poppins_Fallback_6d1a03";
+  font-family: "__Poppins_dd2ae8", "__Poppins_Fallback_dd2ae8";
 }
 
 .ant-collapse-header {
