--- a/app/globals.css
+++ b/app/globals.css
@@ -224,7 +224,7 @@
 }
 
 * {
-  font-family: "__Poppins_dd2ae8", "__Poppins_Fallback_dd2ae8";
+  font-family: "__Poppins_7df6af", "__Poppins_Fallback_7df6af";
 }
 
 .ant-collapse-header {
